--- a/frontend/src/css/index.css
+++ b/frontend/src/css/index.css
@@ -28,6 +28,12 @@ main {
   min-height: 79vh;
 }
 
+img {
+  display: block;
+  height: 70px;
+  width: 500px;
+  margin: 10px 10px 30px 0px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
